# mcp-agent-platform

./: .env  .env.example  .gitignore  =13.0.0  =5.12.0  DEEPSEEK_SETUP.md  README.md  install_deps.sh  package-lock.json  package.json  pyproject.toml  quick_test.py  setup.sh  setup_code_gen.sh  setup_guide.md
docs/: DEEPSEEK_GUIDE.md  cache.md  code-generator-guide.md  deepseek-adapter-guide.md  deepseek-dev-guide.md  deepseek_dev_guide.md
examples/: adapterSpec.json  ai-model-fallback-demo.ts  aiFallbackDemoSpec.json  aiModelInterfaceSpec.json  availabilityCheckerSpec.json  claudeAdapterSpec.json  claudeSpec.json  context_demo.js  deepseekAdapterSpec.json  deepseekSpec.json  deepseek_test.js  demoSpec.json  embedding_demo.py  fallback-demo-app.js  fallback-demo.ts  fallbackManagerSpec.json  fixed-api-fallback-demo.js  interfaceSpec.json  model-fallback-demo.ts  modelDemoSpec.json  modelInterfaceSpec.json  modelManagerSpec.json  modelSwitcherSpec.json  rag_demo.py  rag_demo_full.py  real-api-fallback-demo.js  retriever_demo.py  run-ai-fallback-demo.js  run-demo.js  run-fixed-api-demo.js  run-model-demo.js  run-real-api-demo.js  test-api-connection.js  test-enhanced-manager.js  test_cache.py  test_deepseek.py  test_deepseek_client.js  test_mcp_client.py  test_mock.py  vector_store_demo.py
mcp/: __init__.py
mcp_agent_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_augmentation.py  test_augmenter.py  test_config.py  test_context_augmenter.py  test_document_processing.py  test_document_processor.py  test_embedding.py  (+13 more)
(+123 files in other folders)
