[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-platform"
version = "0.1.0"
description = "MCP智能体中台 - 统一的AI模型调用与智能体管理平台"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "MCP Project", email = "your-email@example.com"}
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

[project.scripts]
mcp = "mcp.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*"]
exclude = ["cache*", "docs*", "tests*", "examples*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py310']
